Padding removed for hero section

--- a/app/globals.css
+++ b/app/globals.css
@@ -45,7 +45,7 @@ body {
   /* background-image: 
     radial-gradient(at top left, #f97316 0%, #ea580c 35%); */
 
-  padding: 16px 16px;
+  /* padding: 16px 16px; */
   /* background-image:
 
     url('../public/images/blackspotlight.jpg.jpg'); */
